Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Peter McCluskey (Sep 29, 2004)
  Add support for JAVT timezone.
  Add mailbox_date_trimmer to contrib, faq.

 Peter McCluskey (Jun 2, 2004)
  Add language code substitution cookie patch from Shane Wegner.

============================
HYPERMAIL VERSION 2.2.0:
============================
 Peter McCluskey (May 25, 2004)
  Changed some of the addresses to hypermail-project.org.
  Made the "We delete ... " message print only if progress != 0.

 Peter McCluskey (Mar 23, 2004)
   Changes to speed up incremental update when there are deleted files if
  using usegdbm (it's still slow if usegdbm = 0).

============================
HYPERMAIL VERSION 2.1.9:
============================
 Peter McCluskey (Feb 23, 2004)
  Released version 2.1.9 tar file.

 Peter McCluskey (Feb 17, 2004)
  Add use_sender_date option.
  Fix instructions for doing "make install" so that the documentation will
  be installed.

 Peter McCluskey (Feb 5, 2004)
  Update much of the documentation.

 Peter McCluskey (Feb 4, 2004)
  Change default in setup.c for spamprotect and spamprotect_id to On.

 Peter McCluskey (Feb 2, 2004)
  Add set_report_new_file and set_report_new_folder options.

 Peter McCluskey (Jan 23, 2004)
  Add in missing <a name="end"> for index files.
  Removed a misleading, nonportable timezone string from link titles in
 toplevel index pages.

 Peter McCluskey (Jan 9, 2004)
  Change to make mbox_shortened option work a little better with
 discard_dup_msgids = 0.
  Change folder_by_date option to use "From " date rather than "Date: "
 to decide which subdirectory to use. This makes it consistent with
 top level index page.

 Peter McCluskey (Dec 26, 2003)
  Add increment = -1 mode to enable automatic determination of whether
 to update or append in most cases.

 Peter McCluskey (Dec 3, 2003)
  Added a mbox_shortened option to handle mboxes that have had messages
 deleted from the start of the mbox.
